[gd_scene load_steps=51 format=3 uid="uid://bql8akhayh121"]

[ext_resource type="Script" path="res://src/characters/bosses/Shaka Boom/slimes/Slime.gd" id="1_adhuu"]
[ext_resource type="Script" path="res://assets/resources/scripts/exchangable/health/health_exchangable.gd" id="2_nbk6d"]
[ext_resource type="Resource" uid="uid://2c0wuo38lug" path="res://assets/resources/instances/exchangable/Shaka/SlimeCrawl.tres" id="3_q6q2o"]
[ext_resource type="Texture2D" uid="uid://c8awle6sackfu" path="res://assets/sprites/characters/bosses/shaka boom/slime_trail.png" id="4_k05c5"]
[ext_resource type="Texture2D" uid="uid://k1iit618dj2h" path="res://assets/sprites/characters/bosses/shaka boom/Slime MegaSheet.png" id="5_bj25x"]
[ext_resource type="Script" path="res://custom_nodes/combat/hurt_box.gd" id="6_hyex2"]
[ext_resource type="Script" path="res://custom_nodes/combat/hit_box.gd" id="7_8yei2"]
[ext_resource type="Script" path="res://src/characters/bosses/hit_area.gd" id="8_3f6ut"]
[ext_resource type="Script" path="res://custom_nodes/combat/health_monitor.gd" id="9_h2ke1"]
[ext_resource type="Script" path="res://custom_nodes/emiter/emiter.gd" id="10_nva1m"]
[ext_resource type="AudioStream" uid="uid://b67estg2bm20f" path="res://assets/sounds/effects/boss/shaka/slime/death/Slime Death v2 2.ogg" id="11_xle0r"]
[ext_resource type="AudioStream" uid="uid://xowbxil5um1m" path="res://assets/sounds/effects/boss/shaka/slime/death/Slime Death v2 3.ogg" id="12_t3qol"]
[ext_resource type="AudioStream" uid="uid://b5jo23j7wjsgd" path="res://assets/sounds/effects/boss/shaka/slime/death/Slime Death v2 4.ogg" id="13_lnxlh"]
[ext_resource type="AudioStream" uid="uid://cu6ecl26t3408" path="res://assets/sounds/effects/boss/shaka/slime/death/Slime Death v2.ogg" id="14_pua1m"]
[ext_resource type="AudioStream" uid="uid://bn65o28uxgv4q" path="res://assets/sounds/effects/boss/shaka/slime/idle/Slime Existing 2.ogg" id="15_cjvnw"]
[ext_resource type="AudioStream" uid="uid://b5p685ccyafq7" path="res://assets/sounds/effects/boss/shaka/slime/idle/Slime Existing 3.ogg" id="16_vsfdf"]
[ext_resource type="AudioStream" uid="uid://0wb6xdvseigv" path="res://assets/sounds/effects/boss/shaka/slime/spawn/Slime Birth 2.ogg" id="17_q1ihp"]
[ext_resource type="AudioStream" uid="uid://6ldvea6e7mhv" path="res://assets/sounds/effects/boss/shaka/slime/spawn/Slime Birth 3.ogg" id="18_fs5tn"]
[ext_resource type="AudioStream" uid="uid://bh5fnesmb6nns" path="res://assets/sounds/effects/boss/shaka/slime/spawn/Slime Birth.ogg" id="19_jbbkv"]
[ext_resource type="Script" path="res://custom_nodes/StateMachine/state_overhead.gd" id="20_u3ghg"]
[ext_resource type="Script" path="res://custom_nodes/StateMachine/state_machine.gd" id="21_pwthv"]
[ext_resource type="Script" path="res://src/characters/bosses/Shaka Boom/slimes/slime_states/spawn.gd" id="22_4eoo0"]
[ext_resource type="Script" path="res://src/characters/bosses/Shaka Boom/slimes/slime_states/death.gd" id="23_dhrbp"]
[ext_resource type="Script" path="res://src/characters/bosses/Shaka Boom/slimes/slime_states/idle.gd" id="24_wmw0e"]
[ext_resource type="Script" path="res://src/characters/bosses/Shaka Boom/slimes/slime_states/move.gd" id="25_wnca8"]
[ext_resource type="Script" path="res://src/characters/bosses/Shaka Boom/slimes/slime_states/follow_leader.gd" id="26_xpgld"]
[ext_resource type="Script" path="res://src/characters/bosses/Shaka Boom/slimes/slime_states/knock_back.gd" id="27_rt4ub"]

[sub_resource type="Resource" id="Resource_v0xmn"]
script = ExtResource("2_nbk6d")
max_health = 3
name = ""
symbol = 0

[sub_resource type="Gradient" id="Gradient_tpru6"]
offsets = PackedFloat32Array(0, 0.426523, 1)
colors = PackedColorArray(0.137255, 0.827451, 0.188235, 1, 0, 0.403922, 0, 0.67451, 0, 0.196078, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_u6q03"]
gradient = SubResource("Gradient_tpru6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_22da3"]
particle_flag_disable_z = true
angle_min = -180.0
angle_max = 180.0
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 600.0
initial_velocity_max = 1000.0
angular_velocity_min = -30.0
angular_velocity_max = 30.0
gravity = Vector3(0, 0, 0)
damping_min = 500.0
damping_max = 500.0
attractor_interaction_enabled = false
scale_min = 2.0
scale_max = 10.0
color_ramp = SubResource("GradientTexture1D_u6q03")
turbulence_noise_strength = 20.0

[sub_resource type="Curve" id="Curve_fp5lu"]
_data = [Vector2(0.00626959, 1), 0.0, 0.0, 0, 0, Vector2(0.862069, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_eyydu"]
offsets = PackedFloat32Array(0, 0.872852, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_feqm7"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_vlc48"]
_data = [Vector2(0.00626959, 1), 0.0, 0.0, 0, 0, Vector2(0.862069, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_iif5r"]
offsets = PackedFloat32Array(0, 0.762887, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_fr56l"]
offsets = PackedFloat32Array(0.00687285, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_3ow1e"]
offsets = PackedFloat32Array(0.00687285, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.581033, 0.581033, 0.581033, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bg2rr"]
radius = 12.0
height = 38.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_57ax2"]
radius = 2.99994
height = 17.9996

[sub_resource type="Animation" id="Animation_uuf0a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -19)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("explode_goop:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [21]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D2:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wejv6"]
resource_name = "dead"
length = 1.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.705, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [false],
"method": &"set_physics_process"
}, {
"args": [],
"method": &"create_puddle"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hurt_box/CollisionShape2D4:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.605),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hit_area/CollisionShape2D3:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("explode_goop:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.518, 0.521, 0.911, 0.912),
"transitions": PackedFloat32Array(1, 1, 10, 0.1, 1, 1),
"update": 0,
"values": [Vector2(0, -19), Vector2(0, -19), Vector2(0, -22.9983), Vector2(0, -19), Vector2(0, -16), Vector2(0, -15)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.518, 0.521, 0.708, 0.912),
"transitions": PackedFloat32Array(1, 1, 10, 1e-05, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1.2, 1.16667), Vector2(1, 1), Vector2(1, 1), Vector2(1.2, 0.8)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite2D:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [22, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_gi45i"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}

[sub_resource type="Animation" id="Animation_shoj8"]
resource_name = "idle"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 0.958), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -19), Vector2(0, -17), Vector2(0, -22.12), Vector2(0, -22.0133), Vector2(0, -22.12), Vector2(0, -19)]
}

[sub_resource type="Animation" id="Animation_j4ij0"]
resource_name = "idle_real"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 0.958), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.41, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -19), Vector2(0, -17), Vector2(0, -19)]
}

[sub_resource type="Animation" id="Animation_i34m0"]
resource_name = "start"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.903, 1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.364, 0.477, 0.896, 0.913, 1.071, 1.204, 1.3, 1.372),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1), Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1), Vector2(1, 1), Vector2(0.85, 1.15), Vector2(0.85, 1.15), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.977, 1.002, 1.208, 1.327),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -19), Vector2(0, -19), Vector2(0, -23), Vector2(0, -23), Vector2(0, -19)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [false],
"method": &"set_physics_process"
}, {
"args": [true],
"method": &"set_physics_process"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("hurt_box/CollisionShape2D4:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("hit_area/CollisionShape2D3:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("explode_goop:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [false],
"method": &"toggle_trail"
}, {
"args": [true],
"method": &"toggle_trail"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_53jwu"]
_data = {
"RESET": SubResource("Animation_uuf0a"),
"dead": SubResource("Animation_wejv6"),
"hurt": SubResource("Animation_gi45i"),
"idle": SubResource("Animation_shoj8"),
"idle_real": SubResource("Animation_j4ij0"),
"start": SubResource("Animation_i34m0")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_25pfh"]

[sub_resource type="Gradient" id="Gradient_03wfy"]
colors = PackedColorArray(3.36915e-06, 0.695541, 0.0791862, 0.0784314, 0.431373, 0.431373, 0.431373, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_la1nk"]
gradient = SubResource("Gradient_03wfy")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="Slime" type="CharacterBody2D" node_paths=PackedStringArray("_sprite")]
y_sort_enabled = true
collision_layer = 256
collision_mask = 257
script = ExtResource("1_adhuu")
follow_distance = 7000.0
_sprite = NodePath("Sprite2D")
health_handle = SubResource("Resource_v0xmn")
primary_movement = ExtResource("3_q6q2o")

[node name="hit_particles" type="GPUParticles2D" parent="."]
top_level = true
emitting = false
amount = 60
process_material = SubResource("ParticleProcessMaterial_22da3")
one_shot = true
explosiveness = 1.0

[node name="trail" type="CPUParticles2D" parent="."]
z_index = -2
position = Vector2(0, -10)
emitting = false
amount = 50
lifetime = 5.0
texture = ExtResource("4_k05c5")
gravity = Vector2(0, 0)
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.4
scale_amount_max = 0.6
scale_amount_curve = SubResource("Curve_fp5lu")
color = Color(1, 1, 1, 0.501961)
color_initial_ramp = SubResource("Gradient_eyydu")

[node name="explode_goop" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(0, -11)
emitting = false
amount = 10
lifetime = 0.4
one_shot = true
explosiveness = 1.0
texture = ExtResource("4_k05c5")
emission_shape = 2
emission_sphere_radius = 10.0
direction = Vector2(0, -1)
spread = 70.0
initial_velocity_min = 150.0
initial_velocity_max = 250.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.1
scale_amount_max = 0.2
scale_amount_curve = SubResource("Curve_fp5lu")
color = Color(0.788235, 0.788235, 0.788235, 1)
color_ramp = SubResource("Gradient_feqm7")

[node name="hit_goop" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(0, -22)
emitting = false
amount = 10
lifetime = 0.6
one_shot = true
explosiveness = 1.0
texture = ExtResource("4_k05c5")
emission_shape = 2
emission_sphere_radius = 10.0
spread = 15.0
gravity = Vector2(0, 200)
initial_velocity_min = 400.0
initial_velocity_max = 600.0
damping_min = 1000.0
damping_max = 1000.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.1
scale_amount_max = 0.2
scale_amount_curve = SubResource("Curve_vlc48")
color = Color(0.890196, 0.890196, 0.890196, 1)
color_ramp = SubResource("Gradient_iif5r")

[node name="hit_towards_part" type="CPUParticles2D" parent="."]
z_index = 10
position = Vector2(0, -10)
emitting = false
amount = 20
lifetime = 0.3
one_shot = true
explosiveness = 1.0
emission_shape = 4
emission_points = PackedVector2Array(23, 0)
emission_colors = PackedColorArray()
spread = 15.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 110.0
damping_min = 300.0
damping_max = 300.0
angle_max = 360.0
color = Color(1, 1, 0.533333, 1)
color_ramp = SubResource("Gradient_fr56l")
color_initial_ramp = SubResource("Gradient_3ow1e")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -19)
texture = ExtResource("5_bj25x")
hframes = 23
frame = 21

[node name="hurt_box" type="Area2D" parent="." node_paths=PackedStringArray("health_monitor")]
script = ExtResource("6_hyex2")
health_monitor = NodePath("../HealthMonitor")
alignment = 1

[node name="CollisionShape2D4" type="CollisionShape2D" parent="hurt_box"]
position = Vector2(0, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bg2rr")

[node name="hitbox" type="Area2D" parent="."]
script = ExtResource("7_8yei2")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bg2rr")
disabled = true

[node name="hit_area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource("8_3f6ut")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="hit_area"]
position = Vector2(0, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bg2rr")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.19209e-07)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_57ax2")

[node name="HealthMonitor" type="Node" parent="."]
script = ExtResource("9_h2ke1")
_health = 10

[node name="Center" type="Marker2D" parent="."]
position = Vector2(0, -23)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_53jwu")
}
autoplay = "start"
next/hurt = &"idle"
next/start = &"idle"

[node name="death" type="AudioStreamPlayer" parent="."]
bus = &"Sound"
script = ExtResource("10_nva1m")
audios = Array[AudioStream]([ExtResource("11_xle0r"), ExtResource("12_t3qol"), ExtResource("13_lnxlh"), ExtResource("14_pua1m")])

[node name="idle" type="AudioStreamPlayer" parent="."]
bus = &"Sound"
script = ExtResource("10_nva1m")
audios = Array[AudioStream]([ExtResource("15_cjvnw"), ExtResource("16_vsfdf")])

[node name="spawn" type="AudioStreamPlayer" parent="."]
bus = &"Sound"
script = ExtResource("10_nva1m")
audios = Array[AudioStream]([ExtResource("17_q1ihp"), ExtResource("18_fs5tn"), ExtResource("19_jbbkv")])
varation = 0.1

[node name="glow" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_25pfh")
position = Vector2(0, -1)
scale = Vector2(10, 10)
texture = SubResource("GradientTexture2D_la1nk")

[node name="StateOverhead" type="Node" parent="." node_paths=PackedStringArray("_actor")]
script = ExtResource("20_u3ghg")
_usesActor = true
_actor = NodePath("..")
_usesAnimationPlayer = false

[node name="StateMachine" type="Node" parent="StateOverhead" node_paths=PackedStringArray("starting_state")]
script = ExtResource("21_pwthv")
_name_id = "main"
starting_state = NodePath("spawn")

[node name="spawn" type="Node" parent="StateOverhead/StateMachine" node_paths=PackedStringArray("idle")]
script = ExtResource("22_4eoo0")
idle = NodePath("../idle")

[node name="death" type="Node" parent="StateOverhead/StateMachine"]
script = ExtResource("23_dhrbp")

[node name="idle" type="Node" parent="StateOverhead/StateMachine" node_paths=PackedStringArray("move", "follow_leader")]
script = ExtResource("24_wmw0e")
move = NodePath("../move")
follow_leader = NodePath("../follow_leader")

[node name="move" type="Node" parent="StateOverhead/StateMachine" node_paths=PackedStringArray("idle", "follow_leader")]
script = ExtResource("25_wnca8")
idle = NodePath("../idle")
follow_leader = NodePath("../follow_leader")

[node name="follow_leader" type="Node" parent="StateOverhead/StateMachine" node_paths=PackedStringArray("move", "idle")]
script = ExtResource("26_xpgld")
move = NodePath("../move")
idle = NodePath("../idle")

[node name="knock_back" type="Node" parent="StateOverhead/StateMachine" node_paths=PackedStringArray("move")]
script = ExtResource("27_rt4ub")
move = NodePath("../move")

[connection signal="hit" from="hurt_box" to="." method="_on_hit"]
[connection signal="hit" from="hurt_box" to="hurt_box" method="_on_hit"]
[connection signal="hit" from="hitbox" to="." method="_on_player_hit"]
[connection signal="killed" from="HealthMonitor" to="." method="die"]
